# stationaryorbit.graphics-core

./: .gitignore  CMakeLists.txt  README.md  stationaryorbit-graphics-core.code-workspace
cmake/: Findstationaryorbit.graphics-core.cmake
include/stationaryorbit/: graphics-core.color.hpp  graphics-core.deformation.hpp  graphics-core.image.hpp
include/stationaryorbit/graphics-core/: channelvalue.hpp  cmycolor.hpp  cmykcolor.hpp  colorblending.hpp  colorcomposition.hpp  colorconvert.hpp  colorfillimage.hpp  colortraits.hpp  fundamental.hpp  grayscalecolor.hpp  image.hpp  imagealign.hpp  imageclamp.hpp  imagecropping.hpp  imageflip.hpp  imageoperationargs.hpp  imagescaling.hpp  imageshift.hpp  imageturn.hpp  interpolation.hpp  opacity.hpp  pixarray.hpp  pixmap.hpp  relativecolor.hpp  rgbcolor.hpp  translucentcolor.hpp  xyzcolor.hpp  yuvcolor.hpp
src/: CMakeLists.txt  channelvalue.cpp  cmycolor.cpp  cmykcolor.cpp  colorblending.cpp  colorconvert.cpp  colorfillimage.cpp  fundamental.cpp  grayscalecolor.cpp  imagealign.cpp  imageclamp.cpp  imagecropping.cpp  imageflip.cpp  imagescaling.cpp  imageshift.cpp  imageturn.cpp  interpolation.cpp  opacity.cpp  pixarray.cpp  pixmap.cpp  rgbcolor.cpp  xyzcolor.cpp  yuvcolor.cpp
test/: CMakeLists.txt  core.cpp  graphics-test.cpp
